# magics

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  Makefile.toml  README.md  bacon.toml  flake.nix  gbpplanner-rs-1fda28e4fc69484e.js  graph.dot  graph_0.dot  graph_1.dot  graph_2.dot  index.html  justfile  rust-toolchain.toml  rustfmt.toml  shell.nix  taplo.toml
crates/angle/: Cargo.toml
crates/angle/src/: lib.rs
crates/as_variant/: Cargo.toml
crates/as_variant/examples/: example.rs
crates/as_variant/src/: lib.rs
crates/as_variant/tests/: tests.rs
crates/bevy_fullscreen/: Cargo.toml
crates/bevy_fullscreen/src/: lib.rs
crates/bevy_notify/: Cargo.toml
crates/bevy_notify/examples/: toast.rs
crates/bevy_notify/src/: lib.rs
crates/bevy_touchpad/: Cargo.toml
crates/bevy_touchpad/examples/: two_finger_swipe.rs
crates/bevy_touchpad/src/: lib.rs
crates/bevy_tracking/: Cargo.toml
crates/bevy_tracking/src/: lib.rs
crates/env-to-png/: Cargo.toml
crates/env-to-png/config/: environment.yaml
crates/env-to-png/examples/: sdf.rs
crates/env-to-png/src/: env_to_png.rs  lib.rs
crates/env_to_png/: Cargo.toml
crates/env_to_png/config/: environment.yaml
crates/env_to_png/examples/: sdf.rs
crates/env_to_png/src/: env_to_png.rs  lib.rs
crates/gbp_config/: Cargo.toml
crates/gbp_config/src/: formation.rs  geometry.rs  lib.rs
crates/gbp_environment/: Cargo.toml
crates/gbp_environment/src/: lib.rs
crates/gbp_geometry/: Cargo.toml
crates/gbp_geometry/src/: lib.rs
crates/gbp_global_planner/: Cargo.toml
crates/gbp_global_planner/src/: lib.rs  rrtstar.rs
crates/gbp_linalg/: Cargo.toml
crates/gbp_linalg/src/: lib.rs  pretty_print.rs
crates/gbp_multivariate_normal/: Cargo.toml
crates/gbp_multivariate_normal/src/: dummy_normal.rs  lib.rs
crates/gbp_schedule/: Cargo.toml
crates/gbp_schedule/src/: lib.rs
crates/gbp_schedule/src/schedules/: centered.rs  half_beginning_half_end.rs  interleave_evenly.rs  late_as_possible.rs  mod.rs  soon_as_possible.rs
crates/gbpplanner-rs/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/gbpplanner-rs/assets/models/: box.glb
crates/gbpplanner-rs/examples/: await-loading-obstacle-folder.rs  finite-repeating-timer-with-initial-delay.rs  repeating-timer-with-initial-delay.rs  rrt.rs  rrt3d.rs  rrtenv.rs  rrtstarenv.rs  switch-sdf-image.rs
crates/gbpplanner-rs/src/: asset_loader.rs  bevy_utils.rs  cli.rs  despawn_entity_after.rs  escape_codes.rs  export.rs  goal_area.rs  lib.rs  macros.rs  main.rs  moveable_object.rs  movement.rs  pause_play.rs  prng.rs  robot_spawner.rs  simulation_loader.rs  theme.rs  utils.rs
crates/gbpplanner-rs/src/config/: environment.rs  formation.rs  geometry.rs  mod.rs  reader.rs
crates/gbpplanner-rs/src/diagnostic/: mod.rs  robot.rs
crates/gbpplanner-rs/src/environment/: camera.rs  cursor.rs  follow_cameras.rs  gen_map.rs  map.rs  map_generator.rs  mod.rs
crates/gbpplanner-rs/src/factorgraph/: factorgraph.rs  graphviz.rs  id.rs  message.rs  mod.rs  node.rs  variable.rs
crates/gbpplanner-rs/src/factorgraph/factor/: dynamic.rs  interrobot.rs  marginalise_factor_distance.rs  mod.rs  obstacle.rs  pose.rs  tracking.rs  (+1 more)
crates/gbpplanner-rs/src/input/: camera.rs  general.rs  mod.rs  moveable_object.rs  screenshot.rs  ui.rs
crates/gbpplanner-rs/src/planner/: collisions.rs  factor.rs  factorgraph.rs  message.rs  mod.rs  robot.rs  spawner.rs  tracking.rs  variable.rs
crates/gbpplanner-rs/src/scene/: mod.rs
crates/gbpplanner-rs/src/ui/: controls.rs  custom.rs  data.rs  decoration.rs  metrics.rs  mod.rs  scale.rs  settings.rs
crates/percentage/: Cargo.toml
crates/percentage/src/: lib.rs
crates/repeating_array/: Cargo.toml
crates/repeating_array/src/: lib.rs
crates/seq/: Cargo.toml
crates/seq/src/: lib.rs
crates/unit_interval/: Cargo.toml
crates/unit_interval/src/: lib.rs
crates/units/: Cargo.toml
crates/units/src/: lib.rs  sample_rate.rs
factorgraph/: Cargo.toml
factorgraph/examples/: message_exchange.rs
factorgraph/src/: factor.rs  lib.rs  message.rs  multivariate_normal.rs  robot.rs  variable.rs
factorgraph/src/bbox/: bbox2d.rs  bbox3d.rs
factorgraph/src/factors/: pose.rs
gbp-linalg/: Cargo.toml
gbp-linalg/src/: lib.rs  matrix.rs  vector.rs
gbp-rs/: Cargo.toml
gbp-rs/examples/: 1d_line_fitting.rs  message_exchange.rs
gbp-rs/src/: factor.rs  factorgraph.rs  gaussian.rs  lib.rs  message.rs  multivariate_normal.rs  robot.rs  utils.rs  variable.rs
gbp-rs/src/bbox/: bbox2d.rs  bbox3d.rs  mod.rs
gbp-rs/src/factorgraph/: factor.rs  factorgraph.rs  measurement_model.rs  message.rs  mod.rs  variable.rs
gbp-rs/src/factors/: mod.rs  pose.rs
gbp_config/: Cargo.toml
gbp_linalg/: Cargo.toml
gbp_linalg/src/: lib.rs  pretty_print.rs
gbp_multivariate_normal/: Cargo.toml
gbp_multivariate_normal/src/: lib.rs
gbpplanner-rs/: Cargo.toml
gbpplanner-rs/assets/models/: roomba.glb
gbpplanner-rs/config/: config.toml  default.toml  formation.ron  formation.toml
gbpplanner-rs/src/: asset_loader.rs  camera.rs  config.rs  diagnostics.rs  environment.rs  escape_codes.rs  factorgraph.rs  follow_cameras.rs  input.rs  macros.rs  main.rs  moveable_object.rs  movement.rs  percentage.rs  robot_spawner.rs  shapes.rs  theme.rs  toggle_fullscreen.rs  utils.rs
gbpplanner-rs/src/config/: environment.rs  formation.rs  geometry.rs  mod.rs
gbpplanner-rs/src/environment/: camera.rs  cursor.rs  environment.rs  follow_cameras.rs  gen_map.rs  map.rs  mod.rs
gbpplanner-rs/src/input/: camera.rs  camera_input.rs  general.rs  general_input.rs  mod.rs  moveable_object.rs  moveable_object_input.rs  ui.rs
gbpplanner-rs/src/planner/: debug.rs  factor.rs  factorgraph.rs  marginalise_factor_distance.rs  message.rs  mod.rs  multivariate_normal.rs  robot.rs  spawner.rs  variable.rs  visualiser.rs
gbpplanner-rs/src/planner/visualiser/: communication.rs  communication_radius.rs  factorgraphs.rs  mod.rs  robot.rs  tracer.rs  uncertainty.rs  waypoints.rs
gbpplanner-rs/src/ui/: bindings.rs  controls.rs  custom.rs  decoration.rs  mod.rs  settings.rs
(+234 files in other folders)
