cargo-features = ["codegen-backend"]

[workspace]
resolver = "2" # Important! wgpu/bevy needs this!
members = [
  "gbp_config",
  "gbp_linalg",
  "gbp_multivariate_normal",
  "gbpplanner-rs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/AU-Master-Thesis/gbp-rs"
authors = [
  "Jens Høigaard Jensen <jens.jens@live.dk>",
  "Kristoffer Plagborg Bak Sørensen <kristoffer.pbs@tuta.io>",
]
rust-version = "1.76"
license = "MIT"

[workspace.dependencies]
ndarray = "0.15.6"
thiserror = "1.0.58"

[workspace.lints.rust]
# unsafe_code = "forbid"
missing_debug_implementations = "warn"


[workspace.lints.clippy]
undocumented_unsafe_blocks = "warn"
enum_glob_use = "warn"
cast_possible_truncation = "warn"
tests_outside_test_module = "warn"
assertions_on_result_states = "warn"
# pedantic = "deny"
# nursery = "deny"
unwrap_used = "warn"
# expect_used = "deny"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
opt-level = 3
panic = "abort"
rpath = false
strip = true
incremental = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = true
incremental = true
codegen-backend = "cranelift" # requires nightly

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
