cargo-features = [
  "codegen-backend",
]

[workspace]
resolver = "2" # Important! wgpu/bevy needs this!
members = [
  "crates/angle",
  "crates/min_len_vec",
  "crates/percentage",
  "crates/unit_interval",
  "crates/gbp_linalg",
  "crates/gbp_multivariate_normal",
  # "crates/bevy_undo_redo",
  "crates/gbpplanner-rs",
  "crates/bevy_notify",
  "crates/units",
  "crates/repeating_array",
  "crates/bevy_fullscreen",
  "crates/bevy_touchpad",
  "crates/seq",
  "crates/as_variant",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
repository = "https://github.com/AU-Master-Thesis/gbp-rs"
authors = [
  "Jens Høigaard Jensen <jens.jens@live.dk>",
  "Kristoffer Plagborg Bak Sørensen <kristoffer.pbs@tuta.io>",
]
rust-version = "1.77"
license = "MIT"


[workspace.dependencies]
ndarray = "0.15.6"
anyhow = "1.0.81"
thiserror = "1.0.58"
serde = { version = "1.0.197", features = [
  "derive",
] }

[workspace.lints.rust]
# unsafe_code = "forbid"
missing_debug_implementations = "allow"
missing_docs                  = "allow"


[workspace.lints.clippy]
undocumented_unsafe_blocks       = "warn"
enum_glob_use                    = "warn"
cast_possible_truncation         = "warn"
tests_outside_test_module        = "warn"
assertions_on_result_states      = "warn"
pedantic                         = "warn"
nursery                          = "warn"
unwrap_used                      = "deny"
inline_always                    = "allow"
default_constructed_unit_structs = "allow" # nice for adding plugins, that may later have config values
needless_pass_by_value           = "allow" # bevy uses a lot of pass by value wrapper types like `Query`, `Res` etc.
module_name_repetitions          = "allow"
must_use_candidate               = "allow"

# expect_used = "deny"
dbg_macro = "warn"
todo      = "warn"


[profile.release-optimized]
inherits = "release"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
lto              = "fat"
opt-level        = 3
panic            = "abort"
rpath            = false
# strip            = true
# strip = "debuginfo"
strip       = "symbols"
incremental = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level   = 1
debug       = false
incremental = true
# codegen-backend = "cranelift" # requires nightly
strip = "debuginfo"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm]
inherits      = "release"
opt-level     = "z"
debug         = false
strip         = true
lto           = true
codegen-units = 1
incremental   = false
panic         = "abort"

[profile.flamegraph]
inherits = "release"
strip    = false
