[package]
name = "factorgraph"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
nutype = "0.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
