[package]
name = "gbp-linalg"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
num = "0.4.1"
paste = "1.0.14"

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
