[package]
name = "gbp-rs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
nutype = "0.4.0"
# probability = "0.20.3"
rayon = "1.8.1"
rstest = "0.18.2"
rand = "0.8.5"
rand_distr = "0.4.3"
typed-builder = "0.18.1"
num = "0.4.1"
thiserror = "*"
#itertools = "*"

[dev-dependencies]
charming = { version = "0.3.1", features = ["ssr"] }
