[package]
name = "gbp-rs"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.8", default-features = false, features = ["png"] }
nalgebra = "0.32.3"
nutype = "0.4.0"
rayon = "1.8.1"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints]
workspace = true
