[package]
name = "gbp_config"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
ron = "0.8.1"

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
