[package]
name = "gbpplanner-rs"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gbp-rs = { path = "../gbp-rs" }
gbp-linalg = { path = "../gbp-linalg" }
bevy = { version = "0.12.1", default-features = true, features = ["wayland"] }
bevy-inspector-egui = "0.22.1"
leafwing-input-manager = "0.11.2"
catppuccin = "1.4.0"

toml = "0.8.8"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
clap = { version = "4.4.18", features = ["derive"] }
color-eyre = "0.6.2"
bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
# bevy_mesh_terrain = "0.6.1"
rand = "0.8.5"
itertools = "0.12.1"
petgraph = "0.6.4"
# nalgebra = "0.32.4"
image = { version = "0.24.8", default-features = false, features = ["png"] }
ndarray = "0.15.6"
ndarray-inverse = "0.1.9"
# ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"] } # This is the only backend variant i have gotten to work
num-traits = "0.2.18"
# tap = "1.0.1"

# # Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

[lints]
workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
