[package]
name                   = "angle"
edition                = "2021"
description            = "Angle type to robustly represent angles in either degrees or radians"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
serde.workspace = true

[lints]
workspace = true

[dev-dependencies]
approx = "0.5"
