[package]
name                   = "bevy_touchpad"
edition                = "2021"
description            = "A touchpad plugin for Bevy"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
bevy = "0.13.2"

[lints]
workspace = true
