[package]
name                   = "bevy_tracking"
edition                = "2021"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
bevy.workspace  = true
serde.workspace = true

ringbuf = "0.4.1"

[lints]
workspace = true
