[package]
name = "env-to-png"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
gbpplanner-rs = { path = "../gbpplanner-rs" }
image = "0.25.1"

[lints]
workspace = true
