[package]
name = "gbp_config"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
serde.workspace = true
struct_iterable.workspace = true
thiserror.workspace = true
toml.workspace = true
typed_floats.workspace = true
strum.workspace = true
strum_macros.workspace = true
derive_more.workspace = true
rand.workspace = true
num-traits.workspace = true
itertools.workspace = true
directories = "5.0.1"
gbp_schedule = { path = "../gbp_schedule"}
min_len_vec = { path = "../min_len_vec"}
unit_interval = { path = "../unit_interval"}
ron.workspace = true
serde_yaml.workspace = true
paste = "1.0.15"

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
