[package]
name = "gbp_environment"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
serde.workspace = true
typed_floats.workspace = true
derive_more.workspace = true
clap.workspace = true
thiserror.workspace = true

ron.workspace = true
toml.workspace = true
serde_yaml.workspace = true

angle = {path = "../angle"}
gbp_linalg = {path = "../gbp_linalg"}
gbp_geometry = {path = "../gbp_geometry"}

[lints]
workspace = true
