[package]
name                   = "gbp_environment"
edition                = "2021"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
bevy.workspace         = true
serde.workspace        = true
typed_floats.workspace = true
derive_more.workspace  = true
thiserror.workspace    = true
strum.workspace        = true
strum_macros.workspace = true

ron.workspace        = true
toml.workspace       = true
serde_yaml.workspace = true

angle        = { path = "../angle" }
gbp_linalg   = { path = "../gbp_linalg" }
gbp_geometry = { path = "../gbp_geometry" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# open = "5.1"
clap = { version = "4.5", default-features = false, features = [
  "derive",
] }

[lints]
workspace = true
