[package]
name                   = "gbp_linalg"
edition                = "2021"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
ndarray.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.0"
# quickcheck = "1.0.3"
approx  = "0.5.1"
arbtest = "0.3.1"
paste   = "1.0.14"

[build-dependencies]
embed-resource = "1"

[lints]
workspace = true
