[package]
name                   = "gbp_schedule"
edition                = "2021"
description            = "Iteration schedules for the gbp algorithm"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
bevy.workspace = true

[lints]
workspace = true
