[package]
edition                = "2021"
name                   = "gbpplanner-rs"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true


[features]
dev = [
  "bevy/dynamic_linking",
]
dhat-heap = [
  "dep:dhat",
] # if you are doing heap profiling
dhat-ad-hoc = [
  "dep:dhat",
] # if you are doing ad hoc profiling

# TODO: use this feature, to only sample last measurement when enabled
visualization-obstacle-factors = [
]

visualization = [
  "visualization-obstacle-factors",
]


[dependencies]
percentage              = { path = "../percentage" }
angle                   = { path = "../angle" }
unit_interval           = { path = "../unit_interval" }
min_len_vec             = { path = "../min_len_vec" }
gbp_linalg              = { path = "../gbp_linalg" }
gbp_multivariate_normal = { path = "../gbp_multivariate_normal" }
bevy_notify             = { path = "../bevy_notify" }
units                   = { path = "../units" }
bevy_fullscreen         = { path = "../bevy_fullscreen" }
bevy_touchpad           = { path = "../bevy_touchpad" }
repeating_array         = { path = "../repeating_array" }
seq                     = { path = "../seq" }
interleave_evenly       = { path = "../interleave_evenly" }
gbp_schedule            = { path = "../gbp_schedule" }
env_to_png              = { path = "../env_to_png" }
gbp_config              = { path = "../gbp_config" }
gbp_environment         = { path = "../gbp_environment" }
gbp_global_planner      = { path = "../gbp_global_planner" }

bevy.workspace = true

bevy-inspector-egui = "0.23.2"
bevy_egui           = "0.26.0"
egui_dock           = "0.11.4"
egui_tiles          = "0.7.2"

# bevy_egui = { git = "https://github.com/mvlabat/bevy_egui", branch = "main" } # 0.26 does not support egui 0.27, which egui-notify needs

bevy_rand.workspace       = true
bevy_prng.workspace       = true
parry3d.workspace         = true
parry2d.workspace         = true
struct_iterable.workspace = true
toml.workspace            = true
thiserror.workspace       = true
anyhow.workspace          = true
clap.workspace            = true
itertools.workspace       = true
ndarray.workspace         = true
num-traits.workspace      = true
ron.workspace             = true
strum.workspace           = true
strum_macros.workspace    = true
typed_floats.workspace    = true
delegate.workspace        = true
derive_more.workspace     = true
rrt.workspace             = true
serde_yaml.workspace      = true

egui_extras = { version = "0.26.2", features = [
  "all_loaders",
] }
bevy_mod_picking = { version = "0.18" }
# bevy_eventlistener = "0.7"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", branch = "main" }
image = { version = "0.25", default-features = false, features = [
  "png",
] }
leafwing-input-manager = "0.13.3"
# bevy_infinite_grid = { git = "https://github.com/ForesightMiningSoftwareCorporation/bevy_infinite_grid", branch = "main" }
bevy_infinite_grid = { git = "https://github.com/AU-Master-Thesis/bevy_infinite_grid", branch = "bevy-v0.13.0" }
bevy_more_shapes = { git = "https://github.com/AU-Master-Thesis/bevy_more_shapes", branch = "bevy-v0.13.0" }
# bevy_mesh_terrain = "0.6.1"

bevy_asset_loader = "0.20"

bevy_mod_debugdump = "0.10.0"
# bevy_file_dialog   = "0.5.0"
# bevy-notify      = "0.2.0"


heck            = "0.5.0"
catppuccin      = "1.4.0"

serde = { version = "1.0.196", features = [
  "derive",
] }
clap_complete = "4.5.2"

# color-eyre = "0.6.2"
rand      = "0.8.5"
petgraph  = "0.6"
# ndarray         = "0.15.6"
ndarray-inverse   = "0.1.9"
glob              = "0.3.1"
better-panic      = "0.3.0"

tap = "1.0.1"


ringbuf               = "0.3.3"
bevy_dev_console      = { git = "https://github.com/doonv/bevy_dev_console.git", version = "0.1.0" }
termsize              = "0.1.6"
paste                 = "1.0.14"
egui_plot             = "0.26"
egui_graphs           = "0.19.0"
colored               = "2.1.0"
chrono                = "0.4.37"
# parry3d = "0.13.7"

# font-kit = { version = "0.13.0", features = ["freetype"] }

dark-light = "1.1.1"
bevy_dev   = "0.3.0"
once_cell  = "1.19.0"

smol_str = "0.2.1"
fastrand = "2.0.2"
rand_chacha = { version = "0.3.1", features = [
  "simd",
] }

typed-builder = "0.18.2"
atty          = "0.2.14"
bat           = "0.24.0"
dhat          = { version = "0.3.3", optional = true }
indexmap      = "2.2.6"
# colored-diff  = "0.2.3"
serde_json    = "1.0.116"
colorgrad     = "0.6.2"
open          = "5.1.0"
ordered-float = "4.2.0"
# dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }

# TODO: change to not wasm
[target.'cfg(linux)'.dependencies]
open = "5.1.0"

[dev-dependencies]
pretty_assertions.workspace = true
approx            = "0.5.1"

[build-dependencies]
embed-resource = "2.4.2"

[lints]
workspace = true
