[package]
name                   = "percentage"
edition                = "2021"
description            = "Percentage type to robustly represent percentages"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
serde.workspace = true

[dev-dependencies]
approx            = "0.5.1"
pretty_assertions = "1.4.0"

[lints]
workspace = true
