[package]
name                   = "seq"
edition                = "2021"
description            = "Iterators for common sequences"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]

[lints]
workspace = true
