[package]
name                   = "unit_interval"
edition                = "2021"
description            = "Unit interval type to robustly represent [0,1] intervals"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

[dependencies]
serde.workspace = true

[dev-dependencies]
approx = "0.5.1"
# approx = "0.5"

[lints]
workspace = true
