[package]
name                   = "units"
edition                = "2021"
description            = "A few unit types"
version.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true
license.workspace      = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lints]
workspace = true
